@@ -74,6 +74,9 @@ Bug fixes:
   - during emaj_drop_group() operation, delete now all rows related to the 
     tables belonging to the dropped group from emaj_sequence and emaj_seq_hole 
     tables.
+  - fix a bug in the E-Maj history table purge. If a group is in logging state 
+    for a longer period than the history retention delay ('history_retention' 
+    parameter), the oldest events in the history were unintentionly purged.
 
 0.9.0
 -----
